apps/downloads/radarr/app/auth-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: radarr-auth
spec:
  plugin:
    traefik-oidc-auth:
      Provider:
        Url: "https://idm.lucadev.de/oauth2/openid/radarr"
        ClientId: "radarr"
        ClientSecret: "urn:k8s:secret:radarr-secret:client-secret"
        TokenValidation: "IdToken"
        UsePkce: true
      Scopes: ["openid", "profile"]

---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: radarr-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: radarr
  oidc:
    provider:
      issuer: https://idm.lucadev.de/oauth2/openid/radarr
    clientID: radarr
    clientSecret:
      name: radarr-secret
    redirectURL: /
    logoutPath: /logout
